[gd_scene load_steps=2 format=3 uid="uid://brpqte0vqnujn"]

[ext_resource type="Script" path="res://scripts/select.gd" id="1_cawnx"]

[node name="Select" type="Node2D"]
script = ExtResource("1_cawnx")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 604.0
offset_bottom = 406.0
color = Color(0, 0, 0, 1)

[node name="GUI" type="CanvasLayer" parent="."]

[node name="EnemiesNumber" type="Label" parent="GUI"]
offset_left = 8.0
offset_right = 181.0
offset_bottom = 23.0
text = "Please Add # Enemies:"

[node name="EnemyOptions" type="Node2D" parent="GUI"]

[node name="Add" type="Button" parent="GUI"]
offset_left = 535.0
offset_top = 25.0
offset_right = 574.0
offset_bottom = 56.0
text = "Add"

[node name="EnemyDescription" type="Label" parent="GUI"]
offset_left = 16.0
offset_top = 68.0
offset_right = 586.0
offset_bottom = 149.0
text = "Click on an enemy to learn more about them."
autowrap_mode = 3

[node name="Selected" type="Label" parent="GUI"]
offset_left = 13.0
offset_top = 194.0
offset_right = 152.0
offset_bottom = 217.0
text = "Selected Enemies:"

[node name="Enemies" type="Label" parent="GUI"]
offset_left = 156.0
offset_top = 195.0
offset_right = 196.0
offset_bottom = 218.0

[connection signal="pressed" from="GUI/Add" to="." method="_on_add_pressed"]
